Points, Keys to UX, Mute/Unmute, Jump sound, Dead animation Done/Fixed

--- a/style.css
+++ b/style.css
@@ -1,211 +1,251 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    overflow: hidden;
+body {
+  overflow: hidden;
 }
 
-.cenario{
-    width: 100% ;
-    height: 500px;
-    margin-bottom: 500px; 
-    border-bottom: 20px solid #00a816;
-    background: linear-gradient(#87ceeb,#e0f6ff);
-    position: relative;
-    overflow: hidden;
+.cenario {
+  width: 100%;
+  height: 80vh;
+  border-bottom: 50px solid #00a816;
+  background: linear-gradient(#87ceeb, #e0f6ff);
+  position: relative;
 }
 
-#info{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 25px;
-    font-size: 20px;
-    font-family: "Press Start 2p" , sans-serif;
-
+#info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 25px;
+  font-size: 20px;
+  font-family: "Press Start 2p", sans-serif;
 }
-
-.pipe{
-    width: 50px;
+#info > p {
     position: absolute;
-    bottom: 0;
-    animation: move-pipe 2s linear infinite;     
-    
+    left: 50%;
+    transform: translateX(-50%);
 }
 
-.mario{
-    width: 110px;
-    bottom: 0;
-    position: absolute;
-    
+.pipe {
+  width: 50px;
+  position: absolute;
+  bottom: 0;
+  animation: move-pipe 2s linear infinite;
 }
-.jump{
-    
-    animation: jump 500ms ease-out ; 
-}
-.clouds{
-    position: absolute;
-    width: 500px;
-    animation: clouds-animation 20s linear infinite;
+.mario {
+  width: 110px;
+  bottom: 0;
+  position: absolute;
 }
 
-.bill{
-    position: absolute;
-    width: 100px;
-    bottom: 15px;
-    animation: bill 1.5s linear infinite;
+.jump {
+  animation: jump 500ms ease-out;
+}
+.clouds {
+  position: absolute;
+  width: 700px;
+  animation: clouds-animation 20s linear infinite;
 }
 
-.abaixar{
-    position: absolute;
-    width: 100px;
-    bottom: 0;
+.bill {
+  position: absolute;
+  width: 100px;
+  bottom: 15px;
+  animation: bill 1.5s linear infinite;
+}
+
+.abaixar {
+  position: absolute;
+  width: 100px;
+  bottom: 0;
 }
 
 @keyframes move-pipe {
-    from{
-        right: -80px;
-    }to{
-        right: 100%;
-    }
+  from {
+    right: -80px;
+  }
+  to {
+    right: 100%;
+  }
 }
 
 @keyframes jump {
-    0% {bottom: 0;}
+  0% {
+    bottom: 0;
+  }
 
+  40% {
+    bottom: 120px;
+  }
 
-    40%{bottom: 120px;}
+  50% {
+    bottom: 120px;
+  }
 
-    50%{bottom: 120px;}
+  60% {
+    bottom: 120px;
+  }
 
-    60%{bottom: 120px;} 
-
-
-    100%{bottom: 0;}
+  100% {
+    bottom: 0;
+  }
 }
 
-@keyframes clouds-animation{
-    from{
-        right: -500px;
-    }to{
-        right: 100%;
-    }
+@keyframes clouds-animation {
+  from {
+    right: -500px;
+  }
+  to {
+    right: 100%;
+  }
 }
 
-@keyframes bill{
-    0%{right: -100px;}
+@keyframes bill {
+  0% {
+    right: -100px;
+  }
 
-    100%{right: 100%;}
+  100% {
+    right: 100%;
+  }
 }
 
+@keyframes dead {
+  0% {
+    top: 89%;
+  }
+  50% {
+    top: 85%;
+  }
+  60% {
+    top: 70%;
+  }
+  100% {
+    top: 200%;
+  }
+}
 
 /* LOGIN DO GAME  */
 #login {
-    background-image: url("./image/mario-bros-origem-curiosidades-e-jogos-gratuitos-da-franquia-e1673273306276.webp");
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10PX;
-    font-family: "press start 2p" , sans-serif;    
-    
-    
-    & h1{
-        color: #00a816;
-        font-weight: 400;
-        font-size: 30px;
-    }
-    
-    & input{
-        width: 300px;
-        height: 40px;
-        border: 1px solid #000000;
-        border-radius: 5px;
-        padding: 10px;
-    }
-    
-    & button{
-        width: 300px;
-        height: 40px;
-        border: 1px solid #000000;    
-        border-radius: 5px;
-        background-color: #00a816;
-        color: #ffffff;
-        cursor: pointer;
-        font-size: 20px;
-    }
-    
-   
-    
-    & button:disabled{
-        background-color: darkgray;
-        opacity: 0.5;
-        cursor: not-allowed;
-    }
+  background-image: url("./image/mario-bros-origem-curiosidades-e-jogos-gratuitos-da-franquia-e1673273306276.webp");
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-family: "press start 2p", sans-serif;
 
-  
+  & h1 {
+    color: #00a816;
+    font-weight: 400;
+    font-size: 30px;
+  }
+
+  & input {
+    width: 300px;
+    height: 40px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    padding: 10px;
+  }
+
+  & button {
+    width: 300px;
+    height: 40px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    background-color: #00a816;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 20px;
+  }
+
+  & button:disabled {
+    background-color: darkgray;
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
 }
 
 /* page do game over */
+#game-over {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
 
-#game-over{
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: "press start 2p" , sans-serif;
-    font-size: 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 
-    & img{
-        width: 200px;
-    }
+  font-family: "press start 2p", sans-serif;
+  font-size: 70px;
 
-    & button{
-        width: 200px;
-        height: 40px;
-        border: 1px solid #000000;    
-        border-radius: 20px;
-        background-color: #06ee259f;
-        color: #000000;
-        cursor: pointer;
-        font-size: 20px;
-        font-family: "press start 2p" , sans-serif;
-        animation: button-animation 1s ease-in-out infinite;
+  & img {
+    width: 200px;
+  }
 
-    }
-
+  & button {
+    width: 200px;
+    height: 40px;
+    border: 1px solid #000000;
+    border-radius: 20px;
+    background-color: #06ee259f;
+    color: #000000;
+    cursor: pointer;
+    font-size: 20px;
+    font-family: "press start 2p", sans-serif;
+    animation: button-animation 1s ease-in-out infinite;
+  }
 }
 
-@keyframes button-animation{
-    0%{
-        transform: scale(1);
-    }
-    50%{
-        transform: scale(1.1);
-    }
-    100%{
-        transform: scale(1);
-    }
+@keyframes button-animation {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 @keyframes nome-game-over {
-    0% {
-        transform: translateY(1000px);
-        opacity: 0;
-    }
-    100% {
-        transform: translateY(0);
-        opacity: 1;
-    }
+  0% {
+    transform: translateY(1000px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+/* Mute/Unmute */
+#info button {
+  padding: 1rem;
+
+  cursor: pointer;
+
+  background-color: none;
+  background: none;
+  border: none;
+}
+#info button i {
+  font-size: 1.5rem;
+  color: black;
+}
+#unmute {
+  display: none;
 }
